--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -117,10 +117,10 @@
     padding: 1.25rem 1rem;
 
     &:first-child {
-      transform: translateX(-.875rem);
+      margin-left: -.875rem;
 
       @include mixins.breakpoint-up(lg) {
-        transform: translateX(-1.25rem);
+        margin-left: -1.25rem;
       }
 
       .hero-user {
@@ -192,7 +192,6 @@
     padding: 1rem 1.5rem;
     top: 50%;
     left: -1rem;
-    transform: translateY(-50%);
 
     @include mixins.breakpoint-up(sm) {
       left: -3rem;
@@ -227,7 +226,7 @@
     padding: 1.25rem 1.5rem;
 
     &:first-child {
-      transform: translateX(3rem);
+      margin-inline: 3rem -3rem;
     }
   }
 }
