--- a/src/scss/components/_rules.scss
+++ b/src/scss/components/_rules.scss
@@ -32,6 +32,7 @@
 
 .rule {
   font-size: var(--fs-lg);
+  font-weight: 600;
   background-color: rgba(255, 255, 255, 0.15);
   border-radius: .75rem;
   padding: 1.75rem 1.25rem;
