--- a/app/css/main.css
+++ b/app/css/main.css
@@ -33,6 +33,13 @@
 }
 @font-face {
   font-family: "Inter";
+  src: url("../fonts/Inter-Light.woff2") format("woff2");
+  font-weight: 300;
+  font-display: swap;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Inter";
   src: url("../fonts/Inter-Regular.woff2") format("woff2");
   font-weight: 400;
   font-display: swap;
