--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,5 +1,6 @@
 @use "mixins" as mixins;
 
+@include mixins.font-face("Inter", "Inter-Light", 300, normal);
 @include mixins.font-face("Inter", "Inter-Regular", 400, normal);
 @include mixins.font-face("Inter", "Inter-Medium", 500, normal);
 @include mixins.font-face("Inter", "Inter-SemiBold", 600, normal);
