--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -3,7 +3,7 @@
 .hero {
   color: var(--light);
   background-color: var(--secondary);
-  padding-block: 5rem 10rem;
+  padding-top: 5rem;
 
   &-body {
     display: flex;
