--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,8 +10,18 @@
 @use "./components/section";
 @use "./components/icons";
 @use "./components/buttons";
+@use "./components/field-control";
+@use "./components/form-check";
 @use "./components/logo";
 @use "./components/header";
 @use "./components/hero";
 @use "./components/rules";
+@use "./components/appeals";
+@use "./components/savings";
+@use "./components/software";
+@use "./components/tariffs";
+@use "./components/about";
+@use "./components/callback";
+@use "./components/footer";
 @use "./components/offcanvas";
+@use "./components/tabs";
