--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -10,8 +10,12 @@
 
   // sizes
   --fs-base: .875rem;
+  --fs-md: 1rem;
   --fs-lg: 1rem;
   --fs-xl: 1.25rem;
+  --fs-3xl: 1.75rem;
+  --fs-5xl: 2.25rem;
+  --fs-h2: 2.5rem;
   --fw-base: 400;
   --lh-base: normal;
 
@@ -22,14 +26,18 @@
   --secondary: #7f42e1;
   --dark: #000;
   --light: #fff;
+  --light-mint: #f0f9f3;
+  --light-cold: #e1f2ff;
   --gray: #808080;
+  --gray-100: #f6f6f6;
   --gray-200: #ccc;
 
   // backgrounds
   --body-bg: #fff;
 
   // radius
-  --rounded: 1rem;
+  --rounded: .75rem;
+  --rounded-md: 1rem;
 
   // shadows
   --shadow: 0 0 .625rem .125rem rgba(0,0,0,0.375);
@@ -43,8 +51,16 @@
 
   :root {
     --fs-base: 1rem;
+    --fs-md: 1.125rem;
     --fs-lg: 1.25rem;
     --fs-xl: 1.5rem;
+    --fs-3xl: 2rem;
+    --fs-5xl: 3rem;
+
+    --fs-h2: 3.75rem;
+
+    --rounded: 1rem;
+    --rounded-md: 1.25rem;
   }
 
 }
