--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -92,10 +92,6 @@
 	}
 }
 
-.btn-inline {
-	--_color: inherit;
-}
-
 .btn-inherit {
 	--_fs: inherit;
 	--_fw: inherit;
@@ -105,6 +101,13 @@
 
 	display: inline;
 	text-transform: initial;
+}
+
+.btn-link {
+
+  &.btn-inherit {
+    text-decoration: underline;
+  }
 }
 
 .btn-dark {
@@ -129,12 +132,14 @@
 	--_height: 2.5rem;
 	--_fs: 1rem;
   --_fw: 500;
-  --_rounded: .625rem;
+  --_rounded: 2rem;
 	--_padding: .25rem 1rem;
+  --_icon-size: 1.25rem;
 
 	@include mixins.breakpoint-up(lg) {
 		--_height: 3.125rem;
 		--_fs: 1.25rem;
     --_padding: .25rem 1.25rem;
+    --_icon-size: 1.5rem;
 	}
 }
