--- a/src/scss/components/_field-control.scss
+++ b/src/scss/components/_field-control.scss
@@ -1,86 +1,26 @@
 @use "mixins" as mixins;
 
-.form-control-requireds,
-.form-fieldset-header {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	gap: .75rem 1rem;
-	color: var(--gray-300);
-
-	.form-check {
-		color: inherit;
-
-		&-input {
-
-			&:checked {
-				--bs-form-check-bg-image: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"%3E%3Ccircle cx="10" cy="10" r="8" stroke="none" fill="%23b3b3b3" /%3E%3C/svg%3E')
-			}
-		}
-	}
-
-	&:not(:first-child) {
-		margin-top: 1.5rem;
-	}
-
-	&:not(:last-child) {
-		margin-bottom: 1.5rem;
-	}
-}
-
-.form-control-requireds {
-
-	.required {
-		color: inherit;
-		margin-bottom: 0;
-	}
-}
-
-.form-fieldset-header {
-	flex-wrap: wrap;
-
-	&-title {
-		font-size: 1.25rem;
-		font-weight: 300;
-		letter-spacing: normal;
-		color: inherit;
-	}
-}
-
-.field-control,
-.fieldset {
-	position: relative;
-}
-
-.field-control {
-
-	+ .field-control,
-	+ .btn-submit {
-		margin-top: 1.5rem;
-	}
-}
-
 .field {
 	--_width: 100%;
-	--_height: 2.5rem;
+	--_height: 3rem;
 
-	--_fs: var(--fs-base);
+	--_fs: var(--fs-md);
 	--_fw: var(--fw-base);
 	--_lh: var(--lh-base);
 	--_ls: var(--ls-base);
-	--_color: var(--gray-300);
+	--_color: var(--gray);
 	--_bg: transparent;
-	--_border-width: 1px;
+	--_border-width: 2px;
 	--_border-solid: solid;
-	--_border-color: currentColor;
-	--_rounded: 1.5rem;
+	--_border-color: var(--gray-200);
+	--_rounded: .5rem;
 	--_padding: .625rem 1rem;
 
-	--_color-hover: var(--gray-800);
+	--_color-hover: var(--dark);
 	--_bg-hover: transparent;
 	--_border-color-hover: currentColor;
 
-	--_color-active: var(--gray-800);
+	--_color-active: var(--dark);
 	--_bg-active: transparent;
 	--_border-color-active: currentColor;
 
@@ -101,11 +41,6 @@
 	transition-property: color, background, border;
 	transition-duration: var(--transition-duration);
 	transition-timing-function: var(--transition-timing-function);
-
-	@include mixins.breakpoint-up(lg) {
-		--_height: 3.125rem;
-		--_padding: .78125rem 1rem;
-	}
 
 	&::placeholder {
 		font: inherit;
@@ -128,57 +63,22 @@ textarea {
 	}
 }
 
-.required {
-	font-size: .625rem;
-	color: var(--gray-300);
-	margin-inline-start: auto;
-	margin-bottom: .5rem;
-	text-align: end;
-
-	@include mixins.breakpoint-up(lg) {
-		font-size: .75rem;
-	}
-}
-
 .btn-submit {
 	--_width: 100%;
 
 	&:not(:first-child) {
-		margin-top: 1.5rem;
+		margin-top: 2rem;
 	}
 }
 
-.field-controls {
-
-	+ .field-controls {
-		margin-top: 1.5rem;
-	}
+.field-control,
+.fieldset {
+	position: relative;
 }
 
-[data-has-fields] {
-	display: grid;
-	gap: 1.5rem;
+.fieldset {
 
-	.field-control {
-		margin: 0;
-	}
-
-	[data-columns-field="2"] {
-		@include mixins.breakpoint-up(lg) {
-			grid-column: span 2;
-		}
-	}
-}
-
-[data-has-fields="2"] {
-
-	@include mixins.breakpoint-up(lg) {
-		grid-template-columns: repeat(2, minmax(0, 1fr));
-	}
-}
-
-[data-has-fields="3"] {
-	@include mixins.breakpoint-up(lg) {
-		grid-template-columns: repeat(3, minmax(0, 1fr));
-	}
+  + .fieldset {
+    margin-top: 1rem;
+  }
 }
