--- a/src/scss/components/_form-check.scss
+++ b/src/scss/components/_form-check.scss
@@ -3,11 +3,12 @@
 .form-check {
 	--bs-form-check-bg: transparent;
 
-	font-size: .625rem;
+  display: block;
+	font-size: .75rem;
 	color: var(--gray);
 
 	@include mixins.breakpoint-up(lg) {
-		font-size: .75rem;
+		font-size: .875rem;
 	}
 
 	&:not(:first-child) {
@@ -19,35 +20,33 @@
 		cursor: pointer;
 	}
 
-	&-label {
-		display: flex;
-		align-items: center;
-		gap: 1em;
-	}
-
 	&-input {
 		flex-shrink: 0;
-    width: 1.25em;
-    height: 1.25em;
+    width: 1rem;
+    height: 1rem;
     appearance: none;
 		color: inherit;
     background-color: var(--bs-form-check-bg);
     background-image: var(--bs-form-check-bg-image);
     background-repeat: no-repeat;
     background-position: center;
-    background-size: .5em;
+    background-size: 1em;
+    margin-right: .25rem;
     border: 1px solid currentColor;
-		border-radius: 50%;
+		border-radius: .25rem;
+    transform: translateY(.25rem);
     color-adjust: exact;
     print-color-adjust: exact;
 
 		@include mixins.breakpoint-up(lg) {
-			width: 1em;
-			height: 1em;
+			width: 1.25rem;
+			height: 1.25rem;
+      margin-right: .5rem;
+      transform: translateY(.325rem);
 		}
 
 		&:checked {
-			--bs-form-check-bg-image: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"%3E%3Ccircle cx="10" cy="10" r="8" stroke="none" fill="%23808080" /%3E%3C/svg%3E');
+			--bs-form-check-bg-image: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"%3E%3Cpath fill="%23808080" d="M21.546 5.111a1.5 1.5 0 0 1 0 2.121L10.303 18.475a1.6 1.6 0 0 1-2.263 0L2.454 12.89a1.5 1.5 0 1 1 2.121-2.121l4.596 4.596L19.424 5.111a1.5 1.5 0 0 1 2.122 0"/%3E%3C/svg%3E');
 		}
 	}
 }
