--- a/src/scss/components/_section.scss
+++ b/src/scss/components/_section.scss
@@ -6,37 +6,36 @@
 }
 
 .section {
-  padding-bottom: 5rem;
+  padding-bottom: 7.5rem;
 
 	&-header {
-		margin-bottom: 1.5rem;
+		margin-bottom: 3rem;
 
 		@include mixins.breakpoint-up(lg) {
-			margin-bottom: 3rem;
+			margin-bottom: 4rem;
 		}
 	}
 
 	&-title,
 	&-subtitle {
-		color: var(--gray-400);
-		text-transform: uppercase;
+		color: var(--dark);
 	}
 
 	&-title {
-		display: flex;
-		align-items: center;
-		gap: .25em;
-
-		font-size: 2.5rem;
+    font-size: var(--fs-h2);
 		font-weight: 600;
-		line-height: 1;
+		line-height: 1.1;
 
 		+ .section-subtitle {
-			margin-top: 1rem;
+			margin-top: 1.5rem;
+
+      @include mixins.breakpoint-up(lg) {
+        margin-top: 2rem;
+      }
 		}
 	}
 
 	&-subtitle {
-		font-size: 1.5rem;
+		font-size: var(--fs-xl);
 	}
 }
