--- a/src/scss/vendor.scss
+++ b/src/scss/vendor.scss
@@ -7,7 +7,7 @@
 // @import "../../node_modules/graph-tabs/dist/graph-tabs.min";
 
 // стили для библиотеки aos
-@use "../../node_modules/aos/dist/aos";
+// @use "../../node_modules/aos/dist/aos";
 
 // стили для свайпера
 // @import "../../node_modules/swiper/swiper-bundle.min";
