--- a/app/css/main.css
+++ b/app/css/main.css
@@ -8,6 +8,7 @@
   --fs-md: 1rem;
   --fs-lg: 1rem;
   --fs-xl: 1.25rem;
+  --fs-2xl: 1.25rem;
   --fs-3xl: 1.25rem;
   --fs-5xl: 2.25rem;
   --fs-h2: 2.25rem;
@@ -38,9 +39,10 @@
     --fs-md: 1.125rem;
     --fs-lg: 1.25rem;
     --fs-xl: 1.5rem;
+    --fs-2xl: 1.75rem;
     --fs-3xl: 2rem;
     --fs-5xl: 3rem;
-    --fs-h2: 2.625rem;
+    --fs-h2: 3.625rem;
     --rounded: 1rem;
     --rounded-md: 1.25rem;
   }
@@ -195,6 +197,10 @@ h1, .h1 {
   }
 }
 
+h3, .h3 {
+  font-weight: 500;
+}
+
 p {
   line-height: 1.5em;
 }
@@ -227,7 +233,7 @@ p + p {
 }
 @media (min-width: 991.98px) {
   .section-header {
-    margin-bottom: 4rem;
+    margin-bottom: 5rem;
   }
 }
 .section-title, .section-subtitle {
@@ -243,11 +249,11 @@ p + p {
 }
 @media (min-width: 991.98px) {
   .section-title + .section-subtitle {
-    margin-top: 1.25rem;
+    margin-top: 2.25rem;
   }
 }
 .section-subtitle {
-  font-size: var(--fs-md);
+  font-size: var(--fs-lg);
 }
 
 .icon {
@@ -603,7 +609,7 @@ textarea {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  gap: 1.25rem;
+  gap: 3rem;
 }
 .header > .container {
   -webkit-box-pack: justify;
@@ -623,7 +629,7 @@ textarea {
 .hero {
   color: var(--light);
   background-color: var(--secondary);
-  padding-top: 5rem;
+  padding-block: 5rem 12.5rem;
 }
 .hero-body {
   display: -webkit-box;
@@ -685,10 +691,16 @@ textarea {
 }
 .hero-description {
   font-size: var(--fs-xl);
+  font-weight: 300;
   opacity: 0.9;
 }
 .hero-relative {
   position: relative;
+}
+@media (min-width: 1199.98px) {
+  .hero-relative {
+    margin-right: 5rem;
+  }
 }
 .hero-picture {
   width: 100%;
@@ -698,6 +710,11 @@ textarea {
   border-radius: 1.25rem;
   overflow: hidden;
   position: relative;
+}
+@media (min-width: 1199.98px) {
+  .hero-picture {
+    aspect-ratio: 3/3.5;
+  }
 }
 @media (min-width: 991.98px) {
   .hero-picture {
@@ -877,11 +894,11 @@ textarea {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  gap: 1.25rem;
+  gap: 2.125rem;
 }
 .rules-title {
   font-size: var(--fs-lg);
-  font-weight: 400;
+  font-weight: 300;
   text-align: center;
 }
 .rules-body {
@@ -965,16 +982,16 @@ textarea {
   }
 }
 .appeals-card-title {
-  font-size: var(--fs-3xl);
+  font-size: var(--fs-2xl);
   color: var(--dark);
 }
 .appeals-card-text {
-  font-size: var(--fs-lg);
+  font-size: var(--fs-md);
   margin-top: 0.75rem;
 }
 @media (min-width: 991.98px) {
   .appeals-card-text {
-    margin-top: 1rem;
+    margin-top: 1.125rem;
   }
 }
 .appeals-card picture {
@@ -1010,7 +1027,7 @@ textarea {
   }
 }
 .appeals-card:first-child .appeals-card-image {
-  max-width: 15.75rem;
+  max-width: 12.5rem;
 }
 .appeals-card:nth-child(2) picture {
   margin-bottom: -1.5rem;
@@ -1102,10 +1119,10 @@ textarea {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  gap: 0.75rem;
+  gap: 1.125rem;
 }
 .savings-info-title {
-  font-size: var(--fs-3xl);
+  font-size: var(--fs-2xl);
   color: var(--dark);
 }
 @media (min-width: 991.98px) {
@@ -1114,7 +1131,7 @@ textarea {
   }
 }
 .savings-info-text {
-  font-size: var(--fs-lg);
+  font-size: var(--fs-md);
   font-weight: 500;
   color: var(--dark);
 }
@@ -1241,7 +1258,7 @@ textarea {
 }
 @media (min-width: 991.98px) {
   .software-banner-text {
-    margin-top: 1rem;
+    margin-top: 1.125rem;
   }
 }
 .software-banner-picture {
@@ -1282,7 +1299,7 @@ textarea {
   }
 }
 .software-card-title {
-  font-size: var(--fs-3xl);
+  font-size: var(--fs-2xl);
   color: var(--dark);
 }
 @media (min-width: 991.98px) {
@@ -1380,7 +1397,8 @@ textarea {
   -ms-flex-direction: column;
   flex-direction: column;
   gap: 0.125rem;
-  font-size: var(--fs-3xl);
+  font-size: var(--fs-2xl);
+  font-weight: 500;
 }
 @media (min-width: 991.98px) {
   .tariffs-card-list {
@@ -1822,4 +1840,4 @@ textarea {
 }
 .tab-content > .active {
   display: block;
-}
+}/*# sourceMappingURL=main.css.map */
