--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -13,6 +13,7 @@
   --fs-md: 1rem;
   --fs-lg: 1rem;
   --fs-xl: 1.25rem;
+  --fs-2xl: 1.25rem;
   --fs-3xl: 1.25rem;
   --fs-5xl: 2.25rem;
   --fs-h2: 2.25rem;
@@ -54,10 +55,11 @@
     --fs-md: 1.125rem;
     --fs-lg: 1.25rem;
     --fs-xl: 1.5rem;
+    --fs-2xl: 1.75rem;
     --fs-3xl: 2rem;
     --fs-5xl: 3rem;
 
-    --fs-h2: 2.625rem;
+    --fs-h2: 3.625rem;
 
     --rounded: 1rem;
     --rounded-md: 1.25rem;
