--- a/src/scss/components/_appeals.scss
+++ b/src/scss/components/_appeals.scss
@@ -33,16 +33,16 @@
     }
 
     &-title {
-      font-size: var(--fs-3xl);
+      font-size: var(--fs-2xl);
       color: var(--dark);
     }
 
     &-text {
-      font-size: var(--fs-lg);
+      font-size: var(--fs-md);
       margin-top: .75rem;
 
       @include mixins.breakpoint-up(lg) {
-        margin-top: 1rem;
+        margin-top: 1.125rem;
       }
     }
 
@@ -74,7 +74,7 @@
     &:first-child {
 
       .appeals-card-image {
-        max-width: 15.75rem;
+        max-width: 12.5rem;
       }
     }
 
