--- a/src/scss/components/_savings.scss
+++ b/src/scss/components/_savings.scss
@@ -40,10 +40,10 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    gap: .75rem;
+    gap: 1.125rem;
 
     &-title {
-      font-size: var(--fs-3xl);
+      font-size: var(--fs-2xl);
       color: var(--dark);
 
       @include mixins.breakpoint-up(lg) {
@@ -52,7 +52,7 @@
     }
 
     &-text {
-      font-size: var(--fs-lg);
+      font-size: var(--fs-md);
       font-weight: 500;
       color: var(--dark);
 
